# mitosalt-custom

./: Dockerfile  README.md  config_human.txt  download_genomes.sh  mitosalt_visualizer.py  mypy.ini  pyproject.toml  setup.py
saltshaker/: README.md  __init__.py  __main__.py  classifier.py  config.py  event_caller.py  pytest.ini  spatial.py  types.py  utils.py  visualizer.py
saltshaker/cli/: __init__.py  call.py  classify.py  plot.py
saltshaker/data/: __init__.py  gencode.v49.annotation.MT_genes.bed  mt_blacklist_regions.bed
saltshaker/docs/: classification_algorithm.md
saltshaker/io/: __init__.py  readers.py  vcf_writer.py  writers.py
saltshaker/layout/: __init__.py  engine.py  types.py
saltshaker/tests/: __init__.py  conftest.py  pytest.ini
saltshaker/tests/fixtures/expected/: ground_truth.json
saltshaker/tests/fixtures/inputs/: test_breakpoints.breakpoint  test_clusters.cluster
saltshaker/tests/integration/: __init__.py  test_saltshaker_output.py
saltshaker/tests/unit/: __init__.py  test_helpers.py
