[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "saltshaker"
version = "0.1.0"
description = "Pattern classification and visualization for MitoSAlt"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
    "biopython>=1.78",
]

[project.scripts]
saltshaker = "saltshaker.__main__:main"

[tool.setuptools.package-data]
saltshaker = ["data/*.bed"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
]
ignore = [
    "E501",
]